[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/fonts/aBlackLives.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/fonts/philosopher-bold-48.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/ui/fonts/philosopher-bold-64.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/ui/menus/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Philosopher-Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Philosopher-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/ui/fonts/philosopher-bold-32.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=11]

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="."]
anchor_left = 0.0416667
anchor_top = 0.0740741
anchor_right = 0.958333
anchor_bottom = 0.217593
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainTitle" type="Label" parent="Title"]
margin_right = 1759.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 1 )
text = "Sky Jumper"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Title"]
margin_top = 125.0
margin_right = 1759.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "Gameplay Mechanic Demo"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.0482831
anchor_top = 0.300651
anchor_right = 0.419116
anchor_bottom = 0.932133
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 711.0
margin_bottom = 697.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonStart" type="Button" parent="MarginContainer/MainMenu"]
margin_top = 164.0
margin_right = 711.0
margin_bottom = 241.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonQuit")
focus_neighbour_bottom = NodePath("../ButtonSettings")
focus_next = NodePath("../ButtonSettings")
focus_previous = NodePath("../ButtonQuit")
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Start Game"
flat = true

[node name="ButtonSettings" type="Button" parent="MarginContainer/MainMenu"]
margin_top = 261.0
margin_right = 711.0
margin_bottom = 338.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonStart")
focus_neighbour_bottom = NodePath("../ButtonAbout")
focus_next = NodePath("../ButtonAbout")
focus_previous = NodePath("../ButtonStart")
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Settings"
flat = true

[node name="ButtonAbout" type="Button" parent="MarginContainer/MainMenu"]
margin_top = 358.0
margin_right = 711.0
margin_bottom = 435.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonSettings")
focus_neighbour_bottom = NodePath("../ButtonQuit")
focus_next = NodePath("../ButtonQuit")
focus_previous = NodePath("../ButtonSettings")
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "About"
flat = true

[node name="ButtonQuit" type="Button" parent="MarginContainer/MainMenu"]
margin_top = 455.0
margin_right = 711.0
margin_bottom = 532.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonAbout")
focus_neighbour_bottom = NodePath("../ButtonStart")
focus_next = NodePath("../ButtonStart")
focus_previous = NodePath("../ButtonAbout")
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Quit"
flat = true

[node name="SettingsMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_right = 711.0
margin_bottom = 697.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/SettingsMenu"]
margin_top = 186.0
margin_right = 711.0
margin_bottom = 245.0

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/Resolution"]
margin_top = 3.0
margin_right = 227.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "Resolution"

[node name="OptionsResolution" type="OptionButton" parent="MarginContainer/SettingsMenu/Resolution"]
margin_left = 231.0
margin_right = 711.0
margin_bottom = 59.0
focus_neighbour_top = NodePath("../../ButtonBack")
focus_neighbour_bottom = NodePath("../../Fullscreen/CheckBoxFullscreen")
focus_next = NodePath("../../Fullscreen/CheckBoxFullscreen")
focus_previous = NodePath("../../ButtonBack")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 7 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "1920x1080"
flat = true
align = 1
items = [ "1920x1080", null, false, 0, null, "1280x720", null, false, 1, null, "640x360", null, false, 2, null ]
selected = 0

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/SettingsMenu"]
margin_top = 265.0
margin_right = 711.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_top = 4.0
margin_right = 219.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"

[node name="Label2" type="Label" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_left = 223.0
margin_top = 23.0
margin_right = 343.0
margin_bottom = 37.0
rect_min_size = Vector2( 120, 0 )

[node name="CheckBoxFullscreen" type="CheckBox" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_left = 347.0
margin_right = 711.0
margin_bottom = 61.0
focus_neighbour_top = NodePath("../../Resolution/OptionsResolution")
focus_neighbour_bottom = NodePath("../../Audio/HSliderAudio")
focus_next = NodePath("../../Audio/HSliderAudio")
focus_previous = NodePath("../../Resolution/OptionsResolution")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.94902, 0.341176, 0.341176, 1 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
text = "Off"

[node name="Audio" type="HBoxContainer" parent="MarginContainer/SettingsMenu"]
margin_top = 346.0
margin_right = 711.0
margin_bottom = 399.0

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/Audio"]
margin_right = 296.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Audio Volume"

[node name="HSliderAudio" type="HSlider" parent="MarginContainer/SettingsMenu/Audio"]
margin_left = 300.0
margin_right = 711.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../Fullscreen/CheckBoxFullscreen")
focus_neighbour_bottom = NodePath("../../ButtonBack")
focus_next = NodePath("../../ButtonBack")
focus_previous = NodePath("../../Fullscreen/CheckBoxFullscreen")
size_flags_horizontal = 3
value = 75.0

[node name="ButtonBack" type="Button" parent="MarginContainer/SettingsMenu"]
margin_top = 419.0
margin_right = 711.0
margin_bottom = 496.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../Audio/HSliderAudio")
focus_neighbour_bottom = NodePath("../Resolution/OptionsResolution")
focus_next = NodePath("../Resolution/OptionsResolution")
focus_previous = NodePath("../Audio/HSliderAudio")
custom_styles/focus = SubResource( 10 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Back"
flat = true

[node name="AboutMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_right = 711.0
margin_bottom = 697.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/AboutMenu"]
margin_right = 711.0
margin_bottom = 600.0
rect_min_size = Vector2( 700, 600 )
custom_fonts/italics_font = SubResource( 12 )
custom_fonts/bold_font = SubResource( 13 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "This demo was made during the [b]Devtober[/b] challenge set by [b]Jonathan \"Ellian\" Rousseau[/b] in 2021.
My goal for this challenge was to learn more about 3D game development, including the process of making [color=#f25757]3D models[/color], [color=#f25757]shaders[/color], [color=#f25757]textures[/color], etc and [color=#f25757]managing my time[/color] on actually kind of finishing a project.
This is my very first project relying heavily on the 3D space and I learned a lot during this challenge.
The game mechanics you will find in this demo might end up being used in an actual game I am planning to do at some point, but I am not entirely sure about its direction yet.
[color=#f25757]Thank you so much for checking this out and taking your time to read this! <3[/color]"
text = "This demo was made during the Devtober challenge set by Jonathan \"Ellian\" Rousseau in 2021.
My goal for this challenge was to learn more about 3D game development, including the process of making 3D models, shaders, textures, etc and managing my time on actually kind of finishing a project.
This is my very first project relying heavily on the 3D space and I learned a lot during this challenge.
The game mechanics you will find in this demo might end up being used in an actual game I am planning to do at some point, but I am not entirely sure about its direction yet.
Thank you so much for checking this out and taking your time to read this! <3"

[node name="ButtonBack" type="Button" parent="MarginContainer/AboutMenu"]
margin_top = 620.0
margin_right = 711.0
margin_bottom = 697.0
rect_min_size = Vector2( 360, 60 )
custom_styles/focus = SubResource( 11 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Version" type="Label" parent="."]
anchor_left = 0.799086
anchor_top = 0.88496
anchor_right = 0.991795
anchor_bottom = 0.985886
custom_fonts/font = ExtResource( 2 )
text = "ver. 0.00
Elegist"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="MarginContainer/MainMenu/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="item_selected" from="MarginContainer/SettingsMenu/Resolution/OptionsResolution" to="." method="_on_OptionsResolution_item_selected"]
[connection signal="toggled" from="MarginContainer/SettingsMenu/Fullscreen/CheckBoxFullscreen" to="." method="_on_CheckBoxFullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="MarginContainer/AboutMenu/ButtonBack" to="." method="_on_ButtonBack_pressed"]
